--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.14.2",
     "react-slick": "^0.29.0",
