--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
+    "react-redux": "^8.1.2",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.14.2",
     "react-slick": "^0.29.0",
