--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
-    "nodemon": "^3.0.1",
-    "vercel": "^32.2.0"
+    "nodemon": "^3.0.1"
   }
 }
