--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,7 @@
     "react-router-dom": "^6.14.2",
     "react-slick": "^0.29.0",
     "remixicon": "^3.5.0",
-    "slick-carousel": "^1.8.1",
-    "vercel": "^32.2.2"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
