--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.14.2",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "remixicon": "^3.5.0",
     "slick-carousel": "^1.8.1"
   },
