--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,8 @@
     "react-redux": "^8.1.2",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.14.2",
-    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
-    "remixicon": "^3.5.0",
-    "slick-carousel": "^1.8.1"
+    "remixicon": "^3.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
